--- a/locales/uk/translation.json
+++ b/locales/uk/translation.json
@@ -34,9 +34,14 @@
     "distributors": "Дистриб'ютор",
     "releaseDate": "Дата виходу",
     "sexNudity": "Секс і оголеність",
+    "nudity": "Оголеність",
+    "nudityDescription": "Сцени, у яких демонструється часткова або повна оголеність персонажів, включно з еротичними елементами, відвертими позами чи проявами інтимної близькості.",
     "violence": "Насильство",
+    "violenceDescription": "Сцени, що містять надмірну жорстокість і насильство, в яких персонажі зазнають серйозних травм, поранень або кровопролиття, що виходячи за межі звичайного конфлікту чи бійки.",
     "profanity": "Ненормативна лексика",
     "alcoholDrugsSmoking": "Алкоголь, наркотики та куріння",
+    "sensitiveExpressions": "Чутливі висловлювання",
+    "sensitiveExpressionsDescription": "Слова та фрази, які можуть ображати людей або містити агресивні, дискримінаційні чи образливі вислови, спрямовані на конкретну особу чи групу осіб.",
     "none": "Немає",
     "mild": "Незначний",
     "moderate": "Середній",
@@ -47,8 +52,8 @@
     "userDeactivated": "Користувач деактивований",
     "unknownError": "Сталася невідома помилка.",
     "selectContentTag": "Виберіть тег вмісту",
+    "contentTags": "Теги вмісту",
     "maximumLengthTimecodeDescription": "Максимальна довжина тексту не повинна перевищувати 200 символів.",
-    "nudity": "Оголеність",
     "timecodeHasBeenDeleted": "Таймкод було видалено",
     "unableToDeleteTimecode": "Не вдалося видалити таймкоди!",
     "movieDuration": "Тривалість фільму",
@@ -71,6 +76,8 @@
     "areYouSure": "Ви впевнені?",
     "privacyPolicy": "Політика конфіденційності",
     "obsSuccessfullyConnected": "OBS успішно підключено",
+    "connectionError": "Помилка з'єднання!",
+    "unableConnectObsOrConnectionLost": "Неможливо підключитися до {{obs}} або з'єднання було втрачено. Перевірте, чи все налаштовано правильно.",
     "connectionFailed": "Не вдалося встановити з'єднання!",
     "failedGetScenes": "Не вдалося отримати сцени",
     "unableFindScenes": "Не вдалося знайти сцени",
