--- a/locales/uk/translation.json
+++ b/locales/uk/translation.json
@@ -80,10 +80,9 @@
     "unableConnectObsOrConnectionLost": "Неможливо підключитися до {{obs}} або з'єднання було втрачено. Перевірте, чи все налаштовано правильно.",
     "connectionFailed": "Не вдалося встановити з'єднання!",
     "failedGetScenes": "Не вдалося отримати сцени",
-    "unableFindScenes": "Не вдалося знайти сцени",
     "unableFindScene": "Не вдалося знайти сцену: {{scene}}",
     "unableDisplayScene:": "Не вдалося показти сцену: {{scene}}",
-    "sceneActivated:": "Активовано сцену: {{scene}}",
+    "sceneActivated": "Активовано сцену: {{scene}}",
     "sceneFound": "Сцену {{scene}} знайдено",
     "newSceneSuccessfullyConnected": "Нову сцену успішно підключено",
     "unableFindActiveScene": "Не вдалося знайти активну сцену",
@@ -97,15 +96,18 @@
     "port": "Порт",
     "passwordToken": "Пароль/Токен",
     "scene": "Сцена",
+    "changeScene": "Змінити сцену",
+    "selectScene": "Виберіть сцену",
+    "selectedScene": "Вибрана сцена",
     "censorshipScene": "Сцена цензури",
-    "enterNameScene": "Введіть назву сцени, яка буде використовуватися для цензури.",
+    "selectSceneName": "Виберіть сцену, яка буде використовуватися для цензури контенту. OBS повинен бути запущений і підключений!",
     "testing": "Тестування",
     "runTest": "Запустити тест",
     "instructionsTestingSceneSwitching": "Інструкція для тестування переключення сцен:",
     "instructionsTestingSceneSwitchingDescription": [
-        "Перед початком тестування переконайтесь, що у вас є сцена з назвою {{scene}}. Якщо її немає, створіть нову сцену з таким ім’ям.",
+        "Перед початком тестування переконайтесь, що у вас є вибрана відповідна сцена.",
         "Виберіть будь-яку іншу сцену, яка буде вашою початковою сценою для тестування.",
-        "Запустіть тестування. Через 10 секунд поточну сцену буде змінено на сцену {{scene}}.",
+        "Запустіть тестування. Через 10 секунд поточну сцену буде змінено на вибрану вами сцену.",
         "Через ще 10 секунд сцена автоматично повернеться до попередньої активної сцени."
     ],
     "inaction": "Бездіяльність",
@@ -126,5 +128,8 @@
     "timeBuffer": "Буфер часу",
     "timeBufferDescription": "Допомагає уникнути випадкового відображення небажаного контенту в різних версіях хронометражу фільму, додаючи додатковий часовий буфер до та після зазначеного таймкоду.",
     "behavior": "Поведінка",
-    "selectBehavior": "Виберіть поведінку"
+    "selectBehavior": "Виберіть поведінку",
+    "hotkeys": "Гарячі клавіші",
+    "censoringPlayerContent": "Цензурування вмісту програвача",
+    "censoringPlayerContentDescription": "Використання цієї гарячої клавіші дозволяє приховати вміст програвача обраним способом. Дія активна, доки ви не натиснете комбінацію повторно. Ця комбінація також може скасувати певну дію, яка була активована таймкодом."
 }
