--- a/locales/uk/translation.json
+++ b/locales/uk/translation.json
@@ -130,6 +130,7 @@
     "behavior": "Поведінка",
     "selectBehavior": "Виберіть поведінку",
     "hotkeys": "Гарячі клавіші",
+    "hotkeyAssignmentDescription": "Якщо гарячі клавіші не спрацьовують, можливо, вони не призначені або конфліктують з іншими комбінаціями. Відкрийте налаштування гарячих клавіш розширень у Chrome та призначте потрібні клавіші вручну.",
     "censoringPlayerContent": "Цензурування вмісту програвача",
     "censoringPlayerContentDescription": "Використання цієї гарячої клавіші дозволяє приховати вміст програвача обраним способом. Дія активна, доки ви не натиснете комбінацію повторно. Ця комбінація також може скасувати певну дію, яка була активована таймкодом."
 }
