--- a/locales/uk/translation.json
+++ b/locales/uk/translation.json
@@ -4,9 +4,11 @@
     "yes": "Так",
     "no": "Ні",
     "save": "Зберегти",
+    "changesSaved": "Зміни збережено",
     "send": "Надіслати",
     "delete": "Видалити",
     "pause": "Пауза",
+    "play": "Грати",
     "connect": "Підключити",
     "connection": "Підключення",
     "settings": "Налаштування",
@@ -36,6 +38,8 @@
     "sexNudity": "Секс і оголеність",
     "nudity": "Оголеність",
     "nudityDescription": "Сцени, у яких демонструється часткова або повна оголеність персонажів, включно з еротичними елементами, відвертими позами чи проявами інтимної близькості.",
+    "sexualContentWithoutNudity": "Сексуальний вміст без оголення",
+    "sexualContentWithoutNudityDescription": "Сцени, у яких демонструється сексуальні чи інтимні моменти без демонстрації оголеності персонажів. Може включати еротичні натяки, відверті ситуації, близькість між персонажами.",
     "violence": "Насильство",
     "violenceDescription": "Сцени, що містять надмірну жорстокість і насильство, в яких персонажі зазнають серйозних травм, поранень або кровопролиття, що виходячи за межі звичайного конфлікту чи бійки.",
     "profanity": "Ненормативна лексика",
@@ -74,7 +78,7 @@
     "alertSendTimecodes": "Ви впевнені, що хочете надіслати ці таймкоди?",
     "alertDeleteTimecodes": "Ця дія призведе до остаточного видалення ваших таймкоди для цього фільму.",
     "areYouSure": "Ви впевнені?",
-    "privacyPolicy": "Політика конфіденційності",
+    "privacyPolicyShort": "Політика",
     "obsSuccessfullyConnected": "OBS успішно підключено",
     "connectionError": "Помилка з'єднання!",
     "unableConnectObsOrConnectionLost": "Неможливо підключитися до {{obs}} або з'єднання було втрачено. Перевірте, чи все налаштовано правильно.",
@@ -112,9 +116,13 @@
     ],
     "inaction": "Бездіяльність",
     "blur": "Розмити",
+    "unblur": "Прибрати розмиття",
     "hide": "Приховати",
+    "hidePlayer": "Приховати плеєр",
+    "showPlayer": "Показати плеєр",
     "skip": "Пропустити",
     "mute": "Вимкнути звук",
+    "unmute": "Увімкнути звук",
     "obsSceneSwitching": "Перемикання сцен OBS",
     "blurStrength": "Сила розмиття",
     "selectBlurStrength": "Виберіть силу розмиття",
@@ -132,5 +140,34 @@
     "hotkeys": "Гарячі клавіші",
     "hotkeyAssignmentDescription": "Якщо гарячі клавіші не спрацьовують, можливо, вони не призначені або конфліктують з іншими комбінаціями. Відкрийте налаштування гарячих клавіш розширень у Chrome та призначте потрібні клавіші вручну.",
     "censoringPlayerContent": "Цензурування вмісту програвача",
-    "censoringPlayerContentDescription": "Використання цієї гарячої клавіші дозволяє приховати вміст програвача обраним способом. Дія активна, доки ви не натиснете комбінацію повторно. Ця комбінація також може скасувати певну дію, яка була активована таймкодом."
+    "censoringPlayerContentDescription": "Використання цієї гарячої клавіші дозволяє приховати вміст програвача обраним способом. Дія активна, доки ви не натиснете комбінацію повторно. Ця комбінація також може скасувати певну дію, яка була активована таймкодом.",
+    "chatbot": "Чат-бот",
+    "enableChatbot": "Увімкнути чат-бота",
+    "chatbotDescription": "Цей чат-бот дозволяє взаємодіяти з розширенням через ваш Twitch-чат. Ваші глядачі зможуть використовувати команди в чаті, щоб отримувати назву фільму, поточний час перегляду та виконувати інші корисні дії. Для роботи чат-бота потрібно авторизуватися в розширенні через Twitch.",
+    "enableChatbotDescription": "Чат-бот автоматично підключатиметься до вашого Twitch-чату через ваш обліковий запис Twitch у момент запуску фільму.",
+    "connectStreamLive": "Підключатися тільки під час трансляції",
+    "connectStreamLiveDescription": "Чат-бот підключатиметься до чату лише тоді, коли ваша трансляція на Twitch буде онлайн.",
+    "chatCommands": "Команди чату",
+    "addCommand": "Додати команду",
+    "selectAction": "Виберіть дію",
+    "selectAccess": "Виберіть доступ",
+    "chatbotAction": {
+        "stop": "Вимкнути підключення",
+        "currentMovieTime": "Поточний час фільму",
+        "movieTitle": "Назва фільму",
+        "fastForwardRewind": "Перемотка в перед/назад"
+    },
+    "chatbotAccess": {
+        "users": "Користувачі",
+        "moderators": "Mодератори",
+        "onlyMe": "Тільки я"
+    },
+    "movieIsPlayingValue": "фільм йде: {{value}}",
+    "backup": "Резервна копія",
+    "backupDescription": "На цій сторінці ви можете створити резервну копію налаштувань розширення або імпортувати вже збережений файл.",
+    "export": "Експорт",
+    "import": "Iмпорт",
+    "settingsImportedSuccessfully": "Налаштування імпортовано успішно.",
+    "settingsImportedError": "Не вдалося імпортувати налаштування.",
+    "invalidFileFormat": "Неправильний формат файлу"
 }
