Updated API and some improvements

--- a/extension/locales/uk/translation.json
+++ b/extension/locales/uk/translation.json
@@ -25,8 +25,8 @@
     "authorizationRequired": "Потрібна авторизація",
     "authorizationDescription": "Для доступу до певних функцій розширення необхідно пройти авторизацію через Twitch. Детальніше про те, які дані будуть використані, можна дізнатися в <a href='{{url}}' class='text-link' target='_blank' rel='noopener noreferrer'>Політиці конфіденційності</a>.",
     "authorizationRequiredDescription": "Щоб додати нові таймкоди, вам потрібно увійти у свій обліковий запис Twitch.",
-    "logOut": "Вийти",
-    "logIn": "Увійти",
+    "logout": "Вийти",
+    "login": "Увійти",
     "logInTwitch": "Увійти через Twitch",
     "movieCheck": "Перевірка фільму",
     "selectMovie": "Виберіть фільм",
