Added dashboard and the ability to safely delete timecodes

--- a/server/lang/uk/react.json
+++ b/server/lang/uk/react.json
@@ -1,10 +1,15 @@
 {
+    "yes": "Так",
+    "no": "Ні",
     "home": "Головна",
     "download": "Завантажити",
     "privacyPolicyShort": "Політика",
     "extension": "Розширення",
     "server": "Сервер",
+    "logout": "Вийти",
+    "close": "Закрити",
     "homePage": {
+        "title": "Movie Timecode — фільми на Twitch без небажаних сцен",
         "description": "Це зручне браузерне розширення, яке автоматично приховує небажані сцени під час трансляції фільмів на Twitch"
     },
     "auth": {
@@ -17,5 +22,21 @@
         "accountHasBeenDeleted": "Цей обліковий запис було видалено!",
         "accountHasBeenDeactivated": "Цей обліковий запис було деактивовано!",
         "completedSuccessfully": "Авторизація успішно виконана. Ви можете закрити цю сторінку."
-    }
+    },
+    "movies": "Фільми",
+    "timecodes": "Таймкоди",
+    "users": "Користувачі",
+    "author": "Автор",
+    "created": "Створено",
+    "updated": "Оновлено",
+    "segments": "Сегменти",
+    "used": "Використано",
+    "forceDelete": "Примусово видалити",
+    "openInEditor": "Відкрити в редакторі",
+    "areYouSure": "Ви впевнені?",
+    "extensionNotAvailable": "Розширення недоступне!",
+    "extensionNotAvailableDescription": "Не вдалося встановити звʼязок із розширенням для виконання дії. Можливо, розширення не встановлене в браузері.",
+    "alertDelete": "Ця дія призведе до остаточного видалення цього елемнту.",
+    "latest": "Останні",
+    "usage": "Використані"
 }
