Added extended information about timecodes, added content classification, new content tags, and bug fixes

--- a/extension/locales/uk/translation.json
+++ b/extension/locales/uk/translation.json
@@ -17,10 +17,13 @@
     "notFound": "Не знайдено!",
     "close": "Закрити",
     "cancel": "Скасувати",
+    "next": "Далі",
+    "back": "Назад",
     "turnOffCensorship": "Вимкнути цензуру",
     "selectTimecodes": "Виберіть таймкоди",
     "addTimecode": "Додати таймкод",
     "addTimecodes": "Додати таймкоди",
+    "timecodes": "Таймкоди",
     "notFoundTimecodeDescription": "Для цього фільму ще не було додано таймкодів 😢.",
     "authorizationRequired": "Потрібна авторизація",
     "authorizationDescription": "Для доступу до певних функцій розширення необхідно пройти авторизацію через Twitch. Детальніше про те, які дані будуть використані, можна дізнатися в <a href='{{url}}' class='text-link' target='_blank' rel='noopener noreferrer'>Політиці конфіденційності</a>.",
@@ -46,6 +49,20 @@
     "alcoholDrugsSmoking": "Алкоголь, наркотики та куріння",
     "sensitiveExpressions": "Чутливі висловлювання",
     "sensitiveExpressionsDescription": "Слова та фрази, які можуть ображати людей або містити агресивні, дискримінаційні чи образливі вислови, спрямовані на конкретну особу чи групу осіб.",
+    "useDrugsAlcoholTobacco": "Вживання наркотиків, алкоголю або тютюну",
+    "useDrugsAlcoholTobaccoDescription": "Сцени, у яких демонструється вживання наркотичних речовин, алкоголю або тютюнових виробів.",
+    "prohibitedSymbols": "Нацистська й інша заборонена символіка",
+    "prohibitedSymbolsDescription": "Сцени, у яких наочно демонструється нацистська або інша заборонена символіка.",
+    "twitchContentClassification": "Класифікація контенту для Twitch",
+    "twitchContentClassificationDescription": "Виберіть класифікації контенту, яку стрімер повинен увімкнути під час перегляду фільмів на Twitch.",
+    "twitchContentClassificationOptions": {
+        "politicsAndSensitiveSocialIssues": "Політика та чутливі соціальні теми",
+        "drugsIntoxicationTobacco": "Наркотики, алкогольне сп'яніння або надмірне вживання тютюну",
+        "gambling": "Азартні ігри",
+        "profanityVulgarity": "Надмірна нецензурна лексика або вульгарність",
+        "sexualThemes": "Сексуальні теми",
+        "violentGraphic": "Сцени насильства та жорстокості"
+    },
     "none": "Немає",
     "mild": "Незначний",
     "moderate": "Середній",
@@ -60,6 +77,7 @@
     "maximumLengthTimecodeDescription": "Максимальна довжина тексту не повинна перевищувати 200 символів.",
     "timecodeHasBeenDeleted": "Таймкод було видалено",
     "unableToDeleteTimecode": "Не вдалося видалити таймкоди!",
+    "duration": "Тривалість",
     "movieDuration": "Тривалість фільму",
     "movieDurationDescription": "Тривалість фільму може відрізнятися в різних потокових сервісах, тому вам потрібно вказати тривалість фільму, щоб користувачі розуміли, чи збігаються таймкоди.",
     "movieDurationIsTooShort": "Тривалість фільму занадто коротка.",
@@ -169,5 +187,7 @@
     "import": "Iмпорт",
     "settingsImportedSuccessfully": "Налаштування імпортовано успішно.",
     "settingsImportedError": "Не вдалося імпортувати налаштування.",
-    "invalidFileFormat": "Неправильний формат файлу"
+    "invalidFileFormat": "Неправильний формат файлу",
+    "author": "Автор",
+    "segments": "Сегменти"
 }
