Improved settings handling, added content censorship, and added a Twitch section.

--- a/extension/locales/uk/translation.json
+++ b/extension/locales/uk/translation.json
@@ -161,10 +161,14 @@
     "censoringPlayerContentDescription": "Використання цієї гарячої клавіші дозволяє приховати вміст програвача обраним способом. Дія активна, доки ви не натиснете комбінацію повторно. Ця комбінація також може скасувати певну дію, яка була активована таймкодом.",
     "chatbot": "Чат-бот",
     "enableChatbot": "Увімкнути чат-бота",
-    "chatbotDescription": "Цей чат-бот дозволяє взаємодіяти з розширенням через ваш Twitch-чат. Ваші глядачі зможуть використовувати команди в чаті, щоб отримувати назву фільму, поточний час перегляду та виконувати інші корисні дії. Для роботи чат-бота потрібно авторизуватися в розширенні через Twitch.",
+    "chatbotDescription": "Цей чат-бот дозволяє взаємодіяти з розширенням через ваш Twitch-чат. Ваші глядачі зможуть використовувати команди в чаті, щоб отримувати назву фільму, поточний час перегляду та виконувати інші корисні дії.",
     "enableChatbotDescription": "Чат-бот автоматично підключатиметься до вашого Twitch-чату через ваш обліковий запис Twitch у момент запуску фільму.",
-    "connectStreamLive": "Підключатися тільки під час трансляції",
-    "connectStreamLiveDescription": "Чат-бот підключатиметься до чату лише тоді, коли ваша трансляція на Twitch буде онлайн.",
+    "twitchDescription": "У цьому розділі ви можете налаштувати, як розширення взаємодіє з вашим обліковим записом Twitch, за винятком функцій чат-бота яка має свій власний розділ.",
+    "twitchAuthWarning": "Щоб розширення могло взаємодіяти з вашим обліковим записом Twitch, необхідна авторизація. Якщо деякі Twitch-функції не працюють, спробуйте вийти та знову увійти в розширення.",
+    "editTwitchContentClassification": "Редагування класифікації контенту",
+    "editTwitchContentClassificationDescription": "При активації таймкодів і наявності класифікації контенту ця функція автоматично встановлює потрібну класифікацію для вашої трансляції. Після вимкнення таймкодів класифікація буде автоматично видалена.",
+    "checkStreamLive": "Виконувати дії лише під час трансляції",
+    "checkStreamLiveDescription": "Всі дії, пов'язані з Twitch, будуть виконуватися тільки в тому випадку, якщо ваша трансляція буде онлайн.",
     "chatCommands": "Команди чату",
     "addCommand": "Додати команду",
     "selectAction": "Виберіть дію",
