Text added to localization

--- a/extension/locales/uk/translation.json
+++ b/extension/locales/uk/translation.json
@@ -193,5 +193,6 @@
     "settingsImportedError": "Не вдалося імпортувати налаштування.",
     "invalidFileFormat": "Неправильний формат файлу",
     "author": "Автор",
-    "segments": "Сегменти"
+    "segments": "Сегменти",
+    "imdbContentRating": "Рейтинг контенту IMDB"
 }
