Added the ability to add sanctions for a movie

--- a/server/lang/uk/react.json
+++ b/server/lang/uk/react.json
@@ -34,6 +34,7 @@
     "updated": "Оновлено",
     "segments": "Сегменти",
     "used": "Використано",
+    "delete": "Видалити",
     "forceDelete": "Примусово видалити",
     "openInEditor": "Відкрити в редакторі",
     "areYouSure": "Ви впевнені?",
@@ -75,5 +76,40 @@
     "moviesWithTimecodesPage": {
         "title": "Перевірені фільми з таймкодами",
         "description": "Список перевірених фільмів з таймкодами для перегляду на Twitch"
-    }
+    },
+    "sanctions": "Санкції",
+    "sanction": "Санкція",
+    "add": "Додати",
+    "save": "Зберегти",
+    "all": "Усі",
+    "approved": "Підтверджені",
+    "unapproved": "Не підтверджені",
+    "ban": "Бан",
+    "strike": "Страйк",
+    "typeOfSanction": "Тип санкції",
+    "selectType": "Виберіть тип",
+    "reason": "Причина",
+    "selectReason": "Виберіть причину",
+    "copyright": "Авторські права",
+    "sexualContent": "Сексуальний вміст",
+    "other": "Інше",
+    "comment": "Коментар",
+    "send": "Надіслати",
+    "usernameOnWhichTheSanctionIsImposed": "Ім'я користувача, на якого накладено санкцію",
+    "dateOfImpositionOfTheSanction": "Дата накладення санкції",
+    "reportSanction": "Повідомити про санкцію",
+    "textMustBeLongerValue": "Текст повинен містити більше {{value}} символів",
+    "maximumLengthTextShouldNotExceedValue": "Максимальна довжина тексту не повинна перевищувати {{value}} символів",
+    "usernameInvalidFormat": "Неправильний формат імені користувача",
+    "selectDate": "Виберіть дату",
+    "selectMovie": "Виберіть фільм",
+    "youNeedSelectMovie": "Вам потрібно вибрати фільм",
+    "notYetApproved": "Ще не підтверджено",
+    "approvedBy": "Підтверджено",
+    "approvedAt": "Підтверджено о",
+    "lastReport": "Останній рапорт",
+    "open": "Відкрити",
+    "confirm": "Підтвердити",
+    "reports": "Репорти",
+    "sanctionsReportApproveAlert": "Ця дія підтвердить, що на цього користувача накладено санкції, і видалить усі інші повідомлення, надіслані про цього користувача."
 }
