Duplicate message added

--- a/server/lang/uk/react.json
+++ b/server/lang/uk/react.json
@@ -111,5 +111,7 @@
     "open": "Відкрити",
     "confirm": "Підтвердити",
     "reports": "Репорти",
-    "sanctionsReportApproveAlert": "Ця дія підтвердить, що на цього користувача накладено санкції, і видалить усі інші повідомлення, надіслані про цього користувача."
+    "sanctionsReportApproveAlert": "Ця дія підтвердить, що на цього користувача накладено санкції, і видалить усі інші повідомлення, надіслані про цього користувача.",
+    "haveAlreadyReceivedReportAboutUser": "Ми вже отримали повідомлення про цього користувача",
+    "movieNotFound": "Фільм не знайдено"
 }
