Added display of bans and strikes and added a new recommendation

--- a/server/lang/uk/react.json
+++ b/server/lang/uk/react.json
@@ -113,5 +113,7 @@
     "reports": "Репорти",
     "sanctionsReportApproveAlert": "Ця дія підтвердить, що на цього користувача накладено санкції, і видалить усі інші повідомлення, надіслані про цього користувача.",
     "haveAlreadyReceivedReportAboutUser": "Ми вже отримали повідомлення про цього користувача",
-    "movieNotFound": "Фільм не знайдено"
+    "movieNotFound": "Фільм не знайдено",
+    "banCount": "Кількість банів",
+    "sіtrikeCount": "Кількість страйків"
 }
